# oneclick-text2video

./: .gitignore  Readme.md  app.py  biliscrapper.py  main.py  makevideo.py  pyproject.toml  requirements.txt  silicon_flow.py  task_logs.db  test.py  utils.py  ytbscrapper.py
cookies/: bilibili.txt  youtube.txt
templates/: _logs.html  index.html
utils/: __init__.py  biliscrapper.py  debug_logger.py  llm.py  processor.py  silicon_flow.py  sqlite_logger.py  tts.py  ytbscrapper.py
